# TuMags_Reduction_Pipeline

./: .gitignore  Check_image_id.py  Check_intervals.py  Check_ocs.py  LICENSE  LogReader.py  README.md  README.txt  Rotation_data.csv  Separate_obs_from_header.py  TuMag_PD_results_All_filters.csv  TuMag_Reduction.py  TuMags_reduction_example.ipynb  alignment.py  config.py  demodulation.py  field_stop_finder.py  fits_files_handling.py  flare.ipynb  fringes.py  image_filtering.py  image_handler.py  jaeggli.py  main_processing.py  master_dark.py  master_flatfield.py  math_func2.py  new_alignment.py  organizer.py  pd_functions_v22.py  phase_diversity.py  plotting_tools.py  prefilter_removal.py  pyproject.toml  reduction_example_generate_fits.py  reduction_jupyter.ipynb  requirements.in  requirements.txt  shift_func.py  shift_idl.pro  (+10 more)
Analysis/: Minimum_success.ipynb  Minimum_success.py  Prefilter_scans_commissioning.py  demodulation_test.ipynb  helper_organizer.ipynb  minimum_presentation.py  minimum_success_flats_headers.pickle  minimum_success_images_headers.pickle  minimun_succ_checker.ipynb  pd_test.py  reduction_jupyter.ipynb
Documents/: Calibration_oms_guide.md  Correcting_observations.md  Image_header.md  IndexGuide.md  Installation.md  Module_guide.md  TuMags Logsheet - Timelines detailed.csv  TuMags_Reduction_from_scratch.md  TuMags_reduction_guide.md  Working_with_Tumags_data.md  Working_with_fits_files.md
Organized_files/: D09.csv  D10.csv
docs/: Calibration_oms_guide.md  Fit_Prefilter_guide.md  Image_header.md  Installation.md  Working_with_fits_files.md
(+29 files in other folders)
